Fix colors and other things to get to dark mode

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,12 +2,25 @@
 Colors
  **/
 
-/* Defaults colors */
-$header-color: #ccf2ff; /* This should not be transparent */
-$good-color: rgba(0, 143, 0, 0.2);
-$neutral-color: rgba(255, 251, 0, 0.17);
-$bad-color: rgba(255, 38, 0, 0.2);
+$body-color-light: #333;
+$body-color-dark: #bbb;
+$background-color-light: {{ .Site.Params.backgroundColor | default "white" }};
+$background-color-dark: #222;
+$link-hover-color-light: rgba(15, 15, 15, 1);
+$link-hover-color-dark: rgba(240, 240, 240, 1);
+
+/* Table default colors */
+$header-color: #89cff0; /* Baby Blue. This should not be transparent */
+$good-color: #d0f0c0; /* Tea green */
+$neutral-color: #fffacd; /* Lemon Chiffon */
+$bad-color: #fdbcb4; /* Cantaloupe Melon */
 $gray-column-color: #ebebeb;
+
+$header-color-dark: #035096; /* Medium Electric Blue. This should not be transparent */
+$good-color-dark: #006b3c; /* Cadmium Green */
+$neutral-color-dark: #e49b0f;
+$bad-color-dark: #b80f0a; /* Crimson */
+$gray-column-color-dark: #444;
 
 .b {
   background-color: $header-color;
@@ -26,11 +39,11 @@ $gray-column-color: #ebebeb;
 }
 
 /* Accessible colors */
-$accessible-header-color: #89c4f4; /* This should not be transparent */
-$accessible-good-color: rgba(0, 165, 102, 0.3);
-$accessible-neutral-color: rgba(247, 202, 24, 0.6);
-$accessible-bad-color: rgba(210, 82, 178, 0.3);
-$accessible-gray-column-color: #ebebeb;
+$accessible-header-color: #8ab9f1; /* Jordy Blue. This should not be transparent */
+$accessible-good-color: #ace1af; /* Celadon */
+$accessible-neutral-color: #fedc56; /* Mustard */
+$accessible-bad-color: #ff7f7f; /* Light red */
+$accessible-gray-column-color: $gray-column-color;
 
 .accessible-colors .b {
   background-color: $accessible-header-color;
@@ -130,7 +143,7 @@ table.display {
 
 table.display th,
 table.display td {
-  border: 5px solid white;
+  border: 5px solid #f4f4f4;
   padding: .25em .5em;
 }
 
@@ -174,11 +187,6 @@ table.display td.neutral, .neutral {
 }
 
 /* Footer */
-
-footer {
-  background-color: #f3f3f3;
-  text-align: left;
-}
 
 footer h2 {
   font-size: 16px;
@@ -252,7 +260,7 @@ Layout for small screen
   }
 
   table.display td {
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid #f4f4f4;
   }
 
   table.display td:last-child {
@@ -373,4 +381,58 @@ Layout for printing
   tfoot {
     display: table-footer-group;
   }
+}
+
+/**
+Dark mode
+ **/
+
+@media screen and (prefers-color-scheme: dark) {
+
+  table.responsive-table {
+/*     box-shadow: 0 1px 10px rgba(255, 255, 255, 0.4); */
+    color: #ccc;
+  }
+
+  table.display th,
+  table.display td {
+    border: 5px solid #222;
+  }
+
+  table.display td {
+    background-color: $gray-column-color-dark;
+  }
+
+  footer .legend-color {
+    border: 1px solid $body-color-dark;
+  }
+
+  .b {
+    background-color: $header-color-dark;
+  }
+
+  .g {
+    background-color: $good-color-dark;
+  }
+
+  .r {
+    background-color: $bad-color-dark;
+  }
+
+  .y {
+    background-color: $neutral-color-dark;
+  }
+
+}
+
+@media screen and (max-width: 1023px) and (prefers-color-scheme: dark) {
+
+  table.display td {
+    border-bottom: 2px solid #f4f4f4;
+  }
+
+  table.display tr.title-row td {
+    background-color: $header-color-dark;
+  }
+
 }
